<resources>
    <string name="app_name">App Registro Incidencias</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Registro de Incidencias</string>
    <string name="nav_header_subtitle">Grupo Oreo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_graficos">Gráficos</string>
    <string name="nav_actualizar_incidencia">Actualizar Incidencia</string>
    <string name="nav_incidencias">Incidencias</string>
    <string name="nav_registro_usuario">Registro Usuario</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido1">Primer Apellido</string>
    <string name="apellido2">Segundo Apellido</string>
    <string name="provincia">Provincia</string>
    <string name="sexo">Sexo</string>
    <string name="correo">Correo</string>
    <string name="telefono">Teléfono</string>
    <string name="password">Contraseña</string>
    <string name="confirm">Confirmar Contraseña</string>
    <string name="reset">Reset</string>
    <string name="formulario">Formulario de Registro</string>
    <string name="boton">Guardar</string>
    <string name="graficosTitulo">Graficos</string>
    <string name="graficosUsuariosPorFecha">Usuarios Registrados Por Fecha</string>
    <string name="graficosReportesPorArea">Reportes Registrados Por Area</string>
    <string name="graficosReportesPorFecha">Reportes Registrados Por Fecha</string>
    <string name="title_activity_camara">activity_camara</string>
    <string name="prueba">prueba</string>
    <string name="title_activity_login">Login</string>
    <string name="login_username">Correo Electronico</string>
    <string name="login_Password">Contraseña</string>
    <string name="login_start_session">Iniciar Sesion</string>
    <string name="login_end_session">Cerrar Sesion</string>
    <string name="login_register">Registrarse</string>
</resources>
