<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_registro_usurio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_registro_usuario" />
        <item
            android:id="@+id/nav_incidencias"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_incidencias" />
        <item
            android:id="@+id/nav_actualizar_incidencias"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_actualizar_incidencia" />
        <item
            android:id="@+id/nav_graficos"
            android:checkable="false"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_graficos" />
    </group>

</menu>
